<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteX="-1dp"
    tools:layout_editor_absoluteY="-4dp">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:text="@string/calculator"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/firstInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="15"
        android:hint="@string/enter_first_number"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <EditText
        android:id="@+id/secondInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:ems="15"
        android:hint="@string/enter_second_number"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstInput" />

    <Button
        android:id="@+id/multiplication"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/multiplication"
        app:layout_constraintEnd_toStartOf="@+id/division"
        app:layout_constraintStart_toEndOf="@+id/subtraction"
        app:layout_constraintTop_toBottomOf="@+id/secondInput" />

    <Button
        android:id="@+id/subtraction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/subtraction"
        app:layout_constraintEnd_toStartOf="@+id/multiplication"
        app:layout_constraintStart_toEndOf="@+id/addition"
        app:layout_constraintTop_toBottomOf="@+id/secondInput" />

    <Button
        android:id="@+id/addition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/addition"
        app:layout_constraintEnd_toStartOf="@+id/subtraction"
        app:layout_constraintStart_toStartOf="@+id/secondInput"
        app:layout_constraintTop_toBottomOf="@+id/secondInput" />

    <Button
        android:id="@+id/division"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/division"
        app:layout_constraintEnd_toEndOf="@+id/secondInput"
        app:layout_constraintStart_toEndOf="@+id/multiplication"
        app:layout_constraintTop_toBottomOf="@+id/secondInput" />

</androidx.constraintlayout.widget.ConstraintLayout>